--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Homepage"
 title_separator          : "-"
 name                     : &name "Zhijie He"
 description              : &description "personal description"
-url                      : "https://84059720.xyz" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://84059720.xyz # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "2019012971/2019012971.github.io"
 # Site Author - The following control what appear as part of the author content on the side bar.
