--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,14 @@ repository               : "2019012971/2019012971.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Zhijie He"
+  avatar           : "me.png"
+  name             : "Zhi-jie He (何志傑)"
   pronouns         :  # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Graduate student at Northwest A&F University"
+  location         : "Yangling, Shannxi"
+  # employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "zhijie.he@nwafu.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -36,18 +36,18 @@ author:
   orcid            : "https://orcid.org/0009-0000-8770-7858"
   semantic         : # URL
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=zhijie+he"
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Zhijie-He-5"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "2019012971"
   kaggle           : # Username  
-  # stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  # bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
