--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   avatar           : "me.png"
   name             : "Zhi-jie He (何志傑)"
   pronouns         : "he/him"  
-  bio              : "Graduate student at Northwest A&F University"
+  bio              : "Graduate student at Northwest A&F University (Project 985)"
   location         : "Yangling, Shannxi"
   # employer         : "Red Brick University"
   uri              : # URL
